# Allofw

./: .gitignore  .gitmodules  .travis.yml  README.md  WindowsBuild.md  WindowsPackage.bat  _config.yml  build-travis.sh  dist_linux.py  dist_mac.py  index.html  index.md  params.json
_layouts/: default.html
allofw-openvr.node/: binding.gyp  package.json
allofw-openvr.node/src/: allofw_openvr.cpp  node_omnistereo.cpp  node_omnistereo.h  openvr_omnistereo.cpp  openvr_omnistereo.h
allofw.node/: .gitignore  binding.gyp  makefile  package.json
allofw.node/samples/: 01_window.js  02_spheres.js  03_panorama.js  03_panorama_equirectangular.js  allofw.equirectangular.yaml  allofw.yaml  buddhabrot.coffee  buddhabrot.js  cubes.coffee  cubes.js  cubes_s3d.coffee  cubes_s3d.js  spheres.coffee  spheres.js  spheres_s3d.coffee  spheres_s3d.js  spheres_s3djs.js  texts.coffee  texts.js
allofw.node/src/: allofw.cpp  node_graphics.cpp  node_graphics.h  node_omnistereo.cpp  node_omnistereo.h  node_opengl.cpp  node_sharedmemory.cpp  node_sharedmemory.h
allofw.node/src/gl3binding/: code_generation.py  dts_generation.py  gl3parse.py  gl3prepared.h  glbind.cpp  glbind.d.ts  glbind.h  gltypes.py
allofw.node/test/: gl3.coffee  gl3.js  graphics.js  omnistereo.coffee  omnistereo.js
allofw.node/utils/: allofwutils.js  build.js
allofw.node/utils/app/: allofwapp.js
allofw.node/utils/interface/: fps_counter.js  interface.js  navigation.js
allofw.node/utils/math/: math.js  quaternion.js  vector.js
allofw.node/utils/networking/: networking.js
allofw.node/utils/shape3d/: cubes.js  general_object.js  images.js  shape3d.js  spheres.js  texts.js
allofw.node/utils/text/: text.js  textcache.js
allofw.node/utils/utils/: config.js  events.js  opengl.js  shaders.js  utils.js
allosphere.node/: binding.gyp
allosphere.node/src/: node_phasespace.cpp
binaries/v0.1.0/: sha256sum.txt
binaries/v0.1.0/darwin_x64/: allofw.v6.node  allofw.v7.node  allofw.v8.node  allofw.v9.node  liballofw-graphics.dylib  liballofw.dylib  libavformat.57.dylib  libavutil.55.dylib  libswresample.2.dylib  libswscale.4.dylib  libx264.148.dylib
binaries/v0.1.0/linux_x64/: allofw.node  libGLEW.so.1.10  libavformat.so.54  libavutil.so.52  libbz2.so.1.0  libexpat.so.1  libffi.so.6  libfontconfig.so.1  libfreetype.so.6  libgcrypt.so.11  libgnutls.so.26  libgpg-error.so.0  libgsm.so.1  libmp3lame.so.0  libogg.so.0  libopenjpeg.so.2  libopus.so.0  liborc-0.4.so.0  libp11-kit.so.0  librt.so.1  librtmp.so.0  libschroedinger-1.0.so.0  libspeex.so.1  libstdc++.so.6  libswscale.so.2  libtasn1.so.6  libtheoradec.so.1  libtheoraenc.so.1  libva.so.1  libvorbis.so.0  libvorbisenc.so.2  libvpx.so.1  libx264.so.142  libxcb.so.1  libxvidcore.so.4  libz.so.1
binaries/v0.1.0/win32_x64/: allofw.node  allofw_openvr.node
docs/: index.md
docs/allofw.node/: allofwutils.md  index.md
docs/liballofw/: Doxyfile
docs/liballofw/html/: allofw_8h.html  allofw_8h_source.html  annotated.html  basic_8h.html  basic_8h_source.html  classallofw_1_1_byte_stream-members.html  classallofw_1_1_byte_stream.html  classallofw_1_1_configuration-members.html  classallofw_1_1_configuration.html  classallofw_1_1_configuration_1_1_node-members.html  classallofw_1_1_configuration_1_1_node.html  classallofw_1_1_graphical_backend-members.html  classallofw_1_1_graphical_backend.html  classallofw_1_1_graphical_context2_d-members.html  classallofw_1_1_graphical_context2_d.html  classallofw_1_1_graphical_context3_d.html  classallofw_1_1_logger-members.html  classallofw_1_1_logger.html  classallofw_1_1_logger_factory-members.html  classallofw_1_1_logger_factory.html  classallofw_1_1_logger_scope-members.html  classallofw_1_1_logger_scope.html  classallofw_1_1_omni_app_renderer-members.html  classallofw_1_1_omni_app_renderer.html  classallofw_1_1_omni_app_runner-members.html  classallofw_1_1_omni_app_runner.html  classallofw_1_1_omni_app_simulator-members.html  classallofw_1_1_omni_app_simulator.html  classallofw_1_1_omni_stereo-members.html  classallofw_1_1_omni_stereo.html  classallofw_1_1_omni_stereo_1_1_delegate-members.html  classallofw_1_1_omni_stereo_1_1_delegate.html  classallofw_1_1_open_g_l_window-members.html  classallofw_1_1_open_g_l_window.html  classallofw_1_1_open_g_l_window_1_1_delegate-members.html  classallofw_1_1_open_g_l_window_1_1_delegate.html  classallofw_1_1_paint2_d.html  (+186 more)
liballofw/: .gitmodules  CMakeLists.txt  README.md  install_dependencies.py  liballofw.pc.in
liballofw/cmake_modules/: FindFFMPEG.cmake  FindFreeImage.cmake  FindSkia.cmake
liballofw/dependencies/skia/: .gitignore  SkUserConfig.h  build.bat  build.sh  checkout.bat  checkout.sh  instructions_for_linux.txt
liballofw/include/: common.h  config.h  graphics.h  omnistereo.h  opengl.h
liballofw/include/allofw/: allofw.h  common.h  config.h  graphics.h  logger.h  omniapp.h  omniapp_broadcasting.h  omnistereo.h  opengl.h  opengl_utils.h  stream.h  utils.h
liballofw/include/allofw/math/: basic.h  color.h  geometry.h  math.h  matrix.h  pose.h  quaternion.h  vector.h
liballofw/include/math/: geometry.h  math.h  matrix.h
liballofw/samples/: allofw.simulator.yaml  allofw.yaml  cubes.cpp  cubes_bcast.cpp  makefile
liballofw/src/: allofw.cpp  config.cpp  graphics_ffmpeg.cpp  graphics_skia.cpp  logger.cpp  math.cpp  omniapp.cpp  omniapp_broadcasting.cpp  omniapp_broadcasting_socket.cpp  omnistereo.cpp  opengl.cpp  opengl_utils.cpp  stream.cpp  warpblend.cpp
liballofw/src/test/: test_glfw.cpp
node-allosphere/: .gitignore  binding.gyp  makefile
node-allosphere/include/: phasespace.h
node-allosphere/src/: node_phasespace.cpp  phasespace.cpp
node-package/: .gitignore  binding.gyp
node-package/src/: allofw.cpp  node_graphics.cpp  node_graphics.h  node_omnistereo.cpp  node_omnistereo.h  node_opengl.cpp  node_opengl.h  node_sharedmemory.cpp  node_sharedmemory.h
node-package/test/: gl3.coffee  gl3.js  graphics.js  omnistereo.coffee
node-package/utils/: allofwutils.js
standalone/: depcollect-osx.py
travis/: before-install-osx.sh  build-osx-node.sh  build-osx.sh
(+144 files in other folders)
